--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,29 @@ html {
     align-items: center;
 }
 
+.graph-title {
+    font-size: 24px;
+    padding-bottom: 15px;
+    color: #A8A8B8
+}
+
+.graph-subtitle {
+    font-size: 12px;
+    padding-bottom: 10px;
+    color: #A8A8B8
+}
+
 
 
 .CheckboxRoot {
-  background-color: white;
-  width: 30px;
-  height: 30px;
-  border-radius: 4px;
-  border: 3px solid #B4BAC0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    background-color: white;
+    width: 20px;
+    height: 20px;
+    border-radius: 4px;
+    border: 3px solid #B4BAC0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .CheckboxRoot:hover {
@@ -38,10 +50,10 @@ html {
 }
 
 .Label {
-  color: white;
-  font-size: 20px;
-  font-weight: thin;
-  line-height: 1;
+    color: white;
+    font-size: 17px;
+    font-weight: light;
+    line-height: 1;
 }
 
 
@@ -86,4 +98,62 @@ html {
 .SliderThumb:focus {
     outline: none;
     box-shadow: 0 0 0 5px gray;
+}
+
+
+
+button, fieldset, input {
+    all: unset;
+}
+
+.TabsRoot {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
+.TabsList {
+    flex-shrink: 0;
+    display: flex;
+    border-bottom: 1px solid var(--mauve-6);
+    margin-bottom: 25px;
+}
+
+.TabsTrigger {
+    font-family: inherit;
+    padding: 10px 20px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    font-size: 15px;
+    line-height: 1;
+    user-select: none;
+}
+.TabsTrigger:first-child {
+    border-top-left-radius: 6px;
+}
+.TabsTrigger:last-child {
+    border-top-right-radius: 6px;
+}
+.TabsTrigger:hover {
+    color: var(--violet-11);
+}
+.TabsTrigger[data-state='active'] {
+    box-shadow: inset 0 -1px 0 0 currentColor, 0 1px 0 0 currentColor;
+}
+.TabsTrigger:focus {
+    position: relative;
+}
+
+.TabsContent {
+    flex-grow: 1;
+    padding: 20px;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    outline: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
